# rag-annotator

./: .gitignore  LICENSE  README.md  annotate_tool.py  dark_theme.css  example_input.json  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/resources/: __init__.py  dark_theme.css  ground_truth_schema.json
app/utils/: __init__.py  bm25_handler.py  data_handler.py  formatting.py  ui_helpers.py  validation.py
app/widgets/: __init__.py  annotation_app.py  bottom_panel.py  left_panel.py  list_item_widget.py  main_window.py  right_panel.py  top_panel.py
utils/: formatting.py  ground_truth_schema.json  validation.py
utils/search/: bm25_handler.py
